--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,22 @@
-version: '3'
+version: '3.8'
+
 services:
-  mongo:
-    image: 'mongo'
+  mysql:
+    image: mysql:latest
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: example_password
     volumes:
-      - mongodb_data_container:/data/db
-    container_name: 'almuhasba-mongodb'
-    restart: 'always'
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: rootpassword
-    ports:
-      - '27017:27017'
-    networks:
-      - esnet
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    container_name: 'zookeeper-backend'
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 22181:2181
-    networks:
-      - esnet
+      - mysql_data:/var/lib/mysql
 
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    container_name: 'kafka-backend'
-    depends_on:
-      - zookeeper
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
     ports:
-      - 29092:29092
+      - "8080:80"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://kafka:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    networks:
-      - esnet
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: example_password
 
-  kafka_ui:
-    image: provectuslabs/kafka-ui:latest
-    depends_on:
-      - kafka
-    ports:
-      - 8080:8080
-    environment:
-      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-    networks:
-      - esnet
-
-  almuhasba:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    env_file:
-      - .env.development
-    volumes:
-      - ./src:/app/src
-    container_name: 'almuhasba-backend'
-    restart: 'always'
-    links:
-      - mongo
-    depends_on:
-      - 'mongo'
-      - 'kafka'
-      - 'zookeeper'
-    ports:
-      - '3000:3000'
-    networks:
-      - esnet
-
-networks:
-  esnet:
 volumes:
-  mongodb_data_container:
+  mysql_data:
